# aoc-template

./: .gitignore  README.md  config.sample.toml  config.toml  pyproject.toml
aoc/: __main__.py  config.py  get_input.py  imports.py  solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day08/: solution.py
day1/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
day13/: solution.py
day14/: solution.py
day15/: solution.py
day16/: solution.py
day17/: solution.py
day18/: solution.py
day19/: solution.py
day20/: solution.py
day21/: solution.py
day22/: solution.py
day23/: solution.py
day24/: solution.py
day25/: solution.py
day6/: solution.py
day7/: solution.py
day9/: solution.py
